updates post texts

--- a/_posts/2010-11-15-e-ansa.md
+++ b/_posts/2010-11-15-e-ansa.md
@@ -17,7 +17,7 @@ The project involved making a dress that would produce visual and tactile respon
 
 For this project, I modified a simple RF detector antenna circuit to respond to the right signal frequencies, and used 4 of these sensor circuits to detect the presence and rough location of active cell phone signals around the dress.
 
-An Arduino was used to read the sensor values and program a small external memory bank that controlled 25 columns of small computer fans independently. We could have programmed wave patterns around the dress, but ended up using simpler patterns that were more visually apparent.
+An Arduino was used to read the sensor values and control 25 columns of small computer fans independently. We could have programmed wave patterns around the dress, but ended up using simpler patterns that were more visually apparent.
 
 ![](/assets/projects/e-ansa/eansa_ff.jpg)
 
