--- a/_posts/2016-08-08-lgqd.md
+++ b/_posts/2016-08-08-lgqd.md
@@ -62,3 +62,7 @@ We then proposed an exercise of mixing Freud’s sentences, leaving a blank spac
 Another exercise involved interfering in sentences written by artist Vito Acconci, in which he approaches the performativity of writing and the city, overlapping them with a sinuous grid taken from the city of São Paulo.
 
 {% include swipebox.html prefix="cartaz" %}
+
+Besides typography, expography and architecture also play a normativizing role in how we read dynamic spaces like a city, an office building or a museum. In 2017, the lab hosted a series of talks and discussions with designers, architects, curators and urban planners to discuss these specific layers that we use to mediate and navigate physical spaces. We studied Ernst Neufert's [Architects' Data](https://en.wikipedia.org/wiki/Architects%27_Data){:target="blank_"} as an example of normative design.
+
+{% include swipebox.html prefix="neufert_" %}
