--- a/_posts/2016-08-08-lgqd.md
+++ b/_posts/2016-08-08-lgqd.md
@@ -63,6 +63,6 @@ Another exercise involved interfering in sentences written by artist Vito Acconc
 
 {% include swipebox.html prefix="cartaz" %}
 
-Besides typography, expography and architecture also play a normativizing role in how we read dynamic spaces like a city, an office building or a museum. In 2017, the lab hosted a series of talks and discussions with designers, architects, curators and urban planners to discuss these specific layers that we use to mediate and navigate physical spaces. We studied Ernst Neufert's [Architects' Data](https://en.wikipedia.org/wiki/Architects%27_Data){:target="blank_"} as an example of normative design.
+Besides typography, expography and architecture also play a normativizing role in how we read dynamic spaces like a city, an office building or a museum. In 2017, the lab hosted a series of talks and discussions with designers, architects, curators and urban planners to discuss these specific layers that we use to mediate and navigate physical spaces. We studied Ernst Neufert's [Architects' Data](https://en.wikipedia.org/wiki/Architects%27_Data){:target="blank_"} as an example of how normative design/architecture as a language is created and propagated.
 
 {% include swipebox.html prefix="neufert_" %}
