reorganizes home and post contents. refactors how {{content}} is used in non-post pages

--- a/_pages/404.md
+++ b/_pages/404.md
@@ -6,4 +6,4 @@ No Page Here.
 
 Sorry.
 
-![]({{ site.baseurl }}/assets/covers/gabriel.gif)
+<img src="{{ site.baseurl }}/assets/covers/gabriel.gif" alt="" />
