move sdr to draft

--- a/_posts/2014-12-25-sdr.md
+++ b/_posts/2014-12-25-sdr.md
@@ -1,5 +1,5 @@
 ---
-category: project
+category: draft
 title: SDR
 github: https://github.com/thiagohersan/SDR
 vimeo: https://vimeo.com/252647372
