use photo galleries in posts

--- a/_posts/2014-11-10-0-25-fps.md
+++ b/_posts/2014-11-10-0-25-fps.md
@@ -16,9 +16,7 @@ Can we use physical spaces to give significance to otherwise commonplace exchang
 
 The installation consists of a camera and a mirror placed in front of a building with an LED façade. The camera faces the mirror, which reflects the building. The camera is programmed to automatically take a picture of the building, through the mirror, every couple of seconds, even when no one else is around. Every time a picture is taken, the building flashes white, synchronized with the camera's flash.
 
-![](/assets/projects/0-25-fps/FIESP00_tgh_01.png)
-
-![](/assets/projects/0-25-fps/FIESP00_tgh_07.png)
+{% include swipebox.html prefix="FIESP00_tgh_0" %}
 
 ![](/assets/projects/0-25-fps/s_IMG_1736.jpg)
 
