adds feat filter for home projects

--- a/_posts/2014-11-10-0-25-fps.md
+++ b/_posts/2014-11-10-0-25-fps.md
@@ -1,5 +1,5 @@
 ---
-category: project
+category: feat
 title: 0.25 FPS
 github: https://github.com/thiagohersan/QuarterFramePerSecond
 vimeo: https://vimeo.com/114106478
