--- a/_posts/2014-12-12-memememe.md
+++ b/_posts/2014-12-12-memememe.md
@@ -1,5 +1,5 @@
 ---
-category: project
+category: feat
 title: memememe
 github: https://github.com/thiagohersan/memememe
 vimeo: https://vimeo.com/165396798
