update posts: remove intrinsic swipebox and vimeo headers, and social links from bottom of posts

--- a/_posts/2010-11-15-e-ansa.md
+++ b/_posts/2010-11-15-e-ansa.md
@@ -2,7 +2,6 @@
 category: collaboration
 title: E-ansã
 github: https://github.com/thiagohersan/eAnsaArduino/
-vimeo: https://vimeo.com/54222659/
 www: http://www.onascimento.com/#/e-ans/
 collab: http://www.onascimento.com/
 ---
@@ -25,6 +24,8 @@ There were a lot of fans! and a lot of wire!
 ![](/assets/projects/e-ansa/eansa0.jpg)
 
 This project has been shown in a variety of festivals and exhibitions, and in 2012 it won an award at the [International Festival for Computer Based Art](http://t-m-a.de/cynetart/cfp-2012/preistrager?lang=en){:target="_blank"} in Dresden.
+
+{% include vimeo.html id="54222659" %}
 
 <div class="video-wrapper-wrapper-small">
   <div class="video-wrapper video-wrapper-16x9">
