--- a/_posts/2013-01-27-el-abismo.md
+++ b/_posts/2013-01-27-el-abismo.md
@@ -2,10 +2,8 @@
 category: astrovandalistas
 title: El Abismo
 github: https://github.com/astrovandalistas/AbismoTwitterOF
-vimeo: https://vimeo.com/77638955
 pics: https://www.flickr.com/photos/microhom/sets/72157632606087124
 astros: http://astrovandalistas.cc/abismo/
-swipebox: abismoTwitter
 ---
 ![](/assets/projects/el-abismo/logoHEADER1.jpg)
 
@@ -26,3 +24,5 @@ Besides helping organize the workshops, my other contribution to the project was
 ![](/assets/projects/el-abismo/abismoLPM05.jpg)
 
 I wrote software to build graphical compositions made up of words and phrases from tweets sent with a specific hashtag during the performance. Some of my favorites:
+
+{% include swipebox.html prefix="abismoTwitter" %}
