--- a/_posts/2013-03-17-bangmty.md
+++ b/_posts/2013-03-17-bangmty.md
@@ -2,7 +2,6 @@
 category: astrovandalistas
 title: '#bangMTY'
 github: https://github.com/astrovandalistas/bangMTYRpiPy
-vimeo: https://vimeo.com/46611303
 pics: https://www.flickr.com/photos/microhom/sets/72157633094315817
 astros: http://astrovandalistas.cc/ast/
 ---
@@ -17,3 +16,5 @@ In March of 2013, during a workshop at the [Nrmal Festival](http://www.nrmal.net
 Both versions of the AST can be easily replicated, modified and adapted by anyone who wants to create their own manifestations.
 
 ![](/assets/projects/bangmty/AST_relays.jpg)
+
+{% include vimeo.html id="46611303" %}
