--- a/_posts/2014-06-08-ctrl-z.md
+++ b/_posts/2014-06-08-ctrl-z.md
@@ -2,8 +2,6 @@
 category: project
 title: ctrl-z (you can't put an egg back inside a chicken)
 github: https://github.com/thiagohersan/ctrl-z
-vimeo: https://vimeo.com/128310917
-swipebox: ctrl-z_0
 ---
 ![](/assets/projects/ctrl-z/ctrl-z_02.jpg)
 
@@ -18,3 +16,5 @@ The waveforms from these recordings were then converted into shapes that were in
 ![](/assets/projects/ctrl-z/ctrl-z_egg.jpg)
 
 I am obviously kidding, and no chickens were harmed or involved in the making of this project.
+
+{% include swipebox.html prefix="ctrl-z_0" %}
