--- a/_posts/2014-12-25-sdr.md
+++ b/_posts/2014-12-25-sdr.md
@@ -2,7 +2,6 @@
 category: draft
 title: SDR
 github: https://github.com/thiagohersan/SDR
-vimeo: https://vimeo.com/252647372
 collab: http://impakt.nl/
 ---
 ![](/assets/projects/sdr/diagram00.png)
@@ -35,6 +34,10 @@ Inspired by, and acting as a kind of "monument" for the [June 2013 manifestation
 {% include vimeo.html id="251810364" %}
 
 {% include vimeo.html id="251812165" %}
+
+{% comment %}
+{% include vimeo.html id="252647372" %}
+{% endcomment %}
 
 {% comment %}
 This project was realized during an [Impakt Works Residency](http://impakt.nl/headquarters/works/impakt-artist-in-residence-2015/resident-artist-thiago-hersan/){:target="_blank"} at Impakt Headquarters, in Utrecht, Netherlands.
