adds workshop category. re-organizes _posts directory

--- a/_posts/workshops/2013-01-27-el-abismo.md
+++ b/_posts/workshops/2013-01-27-el-abismo.md
@@ -1,5 +1,5 @@
 ---
-category: astrovandalistas
+category: workshop
 title: El Abismo
 github: https://github.com/astrovandalistas/AbismoTwitterOF
 pics: https://www.flickr.com/photos/microhom/sets/72157632606087124
