adds 'cover' field to post metadata/header

--- a/_posts/2012-07-16-bablrr.md
+++ b/_posts/2012-07-16-bablrr.md
@@ -3,6 +3,7 @@ category: project
 title: Bablrr
 github: https://github.com/thiagohersan/BablrAndroid
 collab: https://www.allyshah.com/
+cover: /assets/projects/bablrr/bablrr00.png
 ---
 ![](/assets/projects/bablrr/bablrr0002.png)
 
