--- a/_posts/2014-06-08-ctrl-z.md
+++ b/_posts/2014-06-08-ctrl-z.md
@@ -2,6 +2,7 @@
 category: project
 title: ctrl-z (you can't put an egg back inside a chicken)
 github: https://github.com/thiagohersan/ctrl-z
+cover: /assets/projects/ctrl-z/ctrl-z_00.jpg
 ---
 ![](/assets/projects/ctrl-z/ctrl-z_02.jpg)
 
