--- a/_posts/2014-11-10-0-25-fps.md
+++ b/_posts/2014-11-10-0-25-fps.md
@@ -4,6 +4,7 @@ title: 0.25 FPS
 github: https://github.com/thiagohersan/QuarterFramePerSecond
 pics: https://www.flickr.com/photos/tuukul/sets/72157648926261349
 collab: https://www.radames.in/
+cover: /assets/projects/0-25-fps/Color_img.png
 ---
 ![](/assets/projects/0-25-fps/Color_img.png)
 
