--- a/_posts/2014-12-12-memememe.md
+++ b/_posts/2014-12-12-memememe.md
@@ -5,6 +5,7 @@ github: https://github.com/thiagohersan/memememe
 pics: https://www.flickr.com/photos/tuukul/sets/72157646159118191
 www: http://www.memememememememe.me/
 collab: https://www.radames.in/
+cover: /assets/projects/memememe/meme2meme_00.jpg
 ---
 {% include vimeo.html id="165396798" %}
 
