--- a/_posts/workshops/2013-01-27-el-abismo.md
+++ b/_posts/workshops/2013-01-27-el-abismo.md
@@ -4,6 +4,7 @@ title: El Abismo
 github: https://github.com/astrovandalistas/AbismoTwitterOF
 pics: https://www.flickr.com/photos/microhom/sets/72157632606087124
 astros: http://astrovandalistas.cc/abismo/
+cover: /assets/projects/el-abismo/abismo10.jpg
 ---
 ![](/assets/projects/el-abismo/logoHEADER1.jpg)
 
