move 'archive' projects into 'archive' category

--- a/_posts/archive/2011-05-30-un-tit-led.md
+++ b/_posts/archive/2011-05-30-un-tit-led.md
@@ -1,5 +1,5 @@
 ---
-category: draft
+category: archive
 title: UN_TIT_LED
 github: https://github.com/thiagohersan/un_tit_ledArduino
 www: http://lizzydevita.com/un_tit_led
