--- a/_posts/archive/2011-12-03-jandig.md
+++ b/_posts/archive/2011-12-03-jandig.md
@@ -1,5 +1,5 @@
 ---
-category: draft
+category: archive
 title: Jandig
 github: https://github.com/memeLab/Jandig/
 pics: http://www.flickr.com/photos/58001963@N04/sets/72157628233698197/
