--- a/_posts/archive/2012-08-17-versom.md
+++ b/_posts/archive/2012-08-17-versom.md
@@ -1,5 +1,5 @@
 ---
-category: draft
+category: archive
 title: VerSom
 ---
 During the months of august and september of 2012, I worked with the residents Ciça Lucchesi and Juliana Perdigão on their project *VerSom* while they were in residency at Marginalia+Lab.
