--- a/_posts/archive/2014-12-31-2014.md
+++ b/_posts/archive/2014-12-31-2014.md
@@ -1,5 +1,5 @@
 ---
-category: draft
+category: archive
 title: 2014
 ---
 2014 é uma videoinstalação interativa composta por 3 monitores e uma impressora a laser. Dois monitores exibirão visualizações construídas em tempo real a partir de imagens e textos encontrados nos streams e murais públicos de perfis de redes sociais de moradores da cidade de São Paulo. O terceiro monitor exibirá um video que mostra um olho humano em close olhando para o espaço expositivo.
