astrolabe and bablrr webp

--- a/_posts/works/2012-07-16-bablrr.md
+++ b/_posts/works/2012-07-16-bablrr.md
@@ -3,9 +3,9 @@ category: project
 title: Bablrr
 github: https://github.com/thiagohersan/BablrAndroid
 collab: https://www.allyshah.com/
-cover: /assets/projects/bablrr/bablrr00.png
+cover: /assets/projects/bablrr/bablrr00.webp
 ---
-![](/assets/projects/bablrr/bablrr0002.png)
+![](/assets/projects/bablrr/bablrr_12.webp)
 
 A collaboration with [Ally Reeves](https://www.allyshah.com/){:target="_blank"}, Bablrr is inspired by our love of keeping it sneaky by subverting basic social networking tools like twitter, facebook and simple text messaging. We'd like to help people keep their quick texts under wraps when it comes to being monitored on anything other than a basic human scale.
 
@@ -15,4 +15,6 @@ That's why we've created a super easy-to-use app that utilizes a trick you've li
 
 Bablrr provides a simple interface to share non-monetizable messages in social networking sites while drawing attention to issues concerning our digital public lives and the involuntary commercialization of our data.
 
-![](/assets/projects/bablrr/bablrr_facebook.png)
+![](/assets/projects/bablrr/bablrr_facebook.webp)
+
+{% include swipebox.html prefix="bablrr_0" %}
