--- a/_posts/works/2014-06-08-ctrl-z.md
+++ b/_posts/works/2014-06-08-ctrl-z.md
@@ -2,9 +2,9 @@
 category: project
 title: ctrl-z (you can't put an egg back inside a chicken)
 github: https://github.com/thiagohersan/ctrl-z
-cover: /assets/projects/ctrl-z/ctrl-z_00.jpg
+cover: /assets/projects/ctrl-z/ctrl-z_00.webp
 ---
-![](/assets/projects/ctrl-z/ctrl-z_02.jpg)
+![](/assets/projects/ctrl-z/ctrl-z_02.webp)
 
 Part performance, part product, this is a kind of exercise in exploring the relationship between language and physical objects, secrets and sentiments.
 
@@ -14,7 +14,7 @@ While [Angry Letters]({{ site.baseurl }}/angry-letters/) dealt with the material
 
 The waveforms from these recordings were then converted into shapes that were inscribed on the inside of 3D-printed eggs. I then tried to hide these eggs back inside chickens...
 
-![](/assets/projects/ctrl-z/ctrl-z_egg.jpg)
+![](/assets/projects/ctrl-z/ctrl-z_egg.webp)
 
 I am obviously kidding, and no chickens were harmed or involved in the making of this project.
 
