re-orgs images for archived projects

--- a/_posts/archive/2012-08-17-versom.md
+++ b/_posts/archive/2012-08-17-versom.md
@@ -12,23 +12,23 @@ The animation system was created in Processing based on initial sketches done by
 
 The control-panel/GUI:
 
-![](/assets/projects/versom/UI.png)
+![]({{ "assets/archive/versom/UI.png" | relative_url }})
 
 And some of the scenes. This one created ‘O’ shapes whose size varied in accordance to the volume of the voice detected by the microphone:
 
-![](/assets/projects/versom/O2.png)
+![]({{ "assets/archive/versom/O2.png" | relative_url }})
 
 This one released running streams of vowels in different directions:
 
-![](/assets/projects/versom/AE.png)
+![]({{ "assets/archive/versom/AE.png" | relative_url }})
 
 This one used a [physics engine](http://www.jbox2d.org/){:target="_blank"} to simulate realistic arcing trajectories for small words made up of vowels:
 
-![](/assets/projects/versom/I.png)
+![]({{ "assets/archive/versom/I.png" | relative_url }})
 
 More than one scene can be enabled at any given time, with different vowels, determined by the control panel:
 
-![](/assets/projects/versom/AEOU.png)
+![]({{ "assets/archive/versom/AEOU.png" | relative_url }})
 
 The vowel-detection system was developed in Max/MSP using [Linear Predictive Coding](http://en.wikipedia.org/wiki/Linear_predictive_coding){:target="_blank"} analysis and filtering.
 
