--- a/_posts/archive/2011-05-30-un-tit-led.md
+++ b/_posts/archive/2011-05-30-un-tit-led.md
@@ -5,7 +5,7 @@ github: https://github.com/thiagohersan/un_tit_ledArduino
 www: http://lizzydevita.com/un_tit_led
 collab: http://lizzydevita.com/
 ---
-![](/assets/projects/un-tit-led/UNTITLED.jpg)
+![]({{ "assets/archive/un-tit-led/UNTITLED.jpg" | relative_url }})
 
 In May of 2011 I helped my friend [Lizzy DeVita](http://lizzydevita.com/){:target="_blank"} with one of her pieces at the Affordable Art Fair in New York.
 
@@ -13,8 +13,8 @@ UN_TIT_LED is a 9&#8242; x 14&#8242; installation made up of a large image print
 
 From her site: "Each light was pre-programmed to react differently when touched — some would respond immediately, while others had a delayed response. Some would fade on and off on their own, while others when touched would turn on a different light down the line."
 
-![](/assets/projects/un-tit-led/braille006.jpg)
+![]({{ "assets/archive/un-tit-led/braille006.jpg" | relative_url }})
 
 In addition to re-wiring all the lights to run on a few AC power supplies, I also used an Arduino and some simple transistor circuits to create the delays and fades used in some of the lights.
 
-![](/assets/projects/un-tit-led/braille003.jpg)
+![]({{ "assets/archive/un-tit-led/braille003.jpg" | relative_url }})
