--- a/_posts/archive/2011-12-03-jandig.md
+++ b/_posts/archive/2011-12-03-jandig.md
@@ -6,7 +6,7 @@ pics: http://www.flickr.com/photos/58001963@N04/sets/72157628233698197/
 www: http://memelab.com.br/jandig/
 collab: http://memelab.com.br/
 ---
-![](/assets/projects/jandig/Jandig_street.jpg)
+![]({{ "assets/archive/jandig/Jandig_street.jpg" | relative_url }})
 
 This was an interesting collaboration with VJ Pixel and other people at **memeLab**.
 
@@ -16,14 +16,10 @@ For our very first installation, we made small black and white paper markers and
 
 When viewed through the software, these markers changed into photographs or drawings that were submitted to the Jandig open-source digital work database.
 
-![](/assets/projects/jandig/Jandig00.jpg)
+![]({{ "assets/archive/jandig/Jandig00.jpg" | relative_url }})
 
 I was mostly responsible for writing the Java code for the Android application. This involved modifying/fixing the [AndAR](http://code.google.com/p/andar/){:target="_blank"} code and integrating it into a system that could recognize multiple markers and display pre-selected 2D images.
 
 I was also responsible for figuring out how to display animated GIFs using OpenGL textures:
 
-<div class="video-wrapper-wrapper-small">
-  <div class="video-wrapper video-wrapper-4x3">
-    <iframe src="//www.youtube.com/embed/z-lzqEBYgEU" frameborder="0" allowfullscreen></iframe>
-  </div>
-</div>
+{% include youtube.html id="z-lzqEBYgEU" ratio="4x3" %}
