--- a/_posts/archive/2012-06-24-evo-repro.md
+++ b/_posts/archive/2012-06-24-evo-repro.md
@@ -7,22 +7,22 @@ In June of 2012 I was invited to collaborate remotely on Evo-Repro, a really awe
 From [their site](http://evorepro.tumblr.com/){:target="_blank"}:
 Evo-Repro is a simulation that explores the relationship between evolution and reproduction. Life’s definition still escapes us but two characteristics are undeniable: life multiplies and life evolves. The two processes serve the same function: the continuation of Life – but it’s hard to separate the two.
 
-![](/assets/projects/evo-repro/evo01.png)
+![]({{ "assets/archive/evo-repro/evo01.png" | relative_url }})
 
 Earlier this year, Joana and George Davis built a simulation system to create animations that explores the relationship between reproduction and evolution. Based on an initial population of organisms and parametrized values to guide their eating, growing, competing and reproducing behavior, the ecosystem grows to create beautifully complex colorful patterns.
 
-![](/assets/projects/evo-repro/evo02.jpg)
+![]({{ "assets/archive/evo-repro/evo02.jpg" | relative_url }})
 
 Part of the second stage of development of the project consisted of building an interactive environment where kids could use their bodies to draw on a screen and use colors to guide where and how the organisms grow, evolve and reproduce.
 
-![](/assets/projects/evo-repro/evo_interaction.png)
+![]({{ "assets/archive/evo-repro/evo_interaction.png" | relative_url }})
 
 I helped design the drawing interface used during this stage of the project. The interface is just a collection of buttons for the users to pick different colors and brush types. The most fun part of this project was designing the different brush-type effects. There's a web prototype version of the interface [on OpenProcessing](http://www.openprocessing.org/sketch/64067){:target="_blank"}, and code [on github](https://github.com/thiagohersan/evoReproBrushProcessing){:target="_blank"}.
 
-![](/assets/projects/evo-repro/evo_interface.png)
+![]({{ "assets/archive/evo-repro/evo_interface.png" | relative_url }})
 
 The Evo-Repro site has [more](http://evorepro.tumblr.com/post/27481040582/screenshot){:target="_blank"} [examples](http://evorepro.tumblr.com/post/27353809477/screenshot-from-painting-with-natural-selection){:target="_blank"} of the [drawings](http://evorepro.tumblr.com/post/27833528115/by-celine-berger){:target="_blank"} that they’ve been making with the interface.
 
-![](/assets/projects/evo-repro/evo_drawing.jpg)
+![]({{ "assets/archive/evo-repro/evo_drawing.jpg" | relative_url }})
 
 Evo-Repro: Painting with Natural Selection is partially funded by a Spark Award from the Sprout Fund and by a Science Education Partnership Award, led by Dr. John A. Pollock, funded in turn by the National Center for Research Resources, a component of the National Institutes of Health.
