re-orgs images for collaboration projects

--- a/_posts/collaborations/2012-09-01-auras.md
+++ b/_posts/collaborations/2012-09-01-auras.md
@@ -2,10 +2,11 @@
 category: collaboration
 title: Auras
 github: https://github.com/thiagohersan/auras04Arduino
+cover: assets/collaborations/auras/bio01.jpg
 ---
-![](/assets/projects/auras/bio01.jpg)
+![]({{ "assets/collaborations/auras/bio01.jpg" | relative_url }})
 
-The [Kirlian photography apparatus](/kirlian-machine/) that I built together with Livia Chagas and Wemerson Machado worked pretty well for taking pictures of fingers, plants, coins and other metallic objects, but it was not very practical for taking pictures of someone's entire aura.
+The [Kirlian photography apparatus]({{ "kirlian-machine/" | relative_url }}) that I built together with Livia Chagas and Wemerson Machado worked pretty well for taking pictures of fingers, plants, coins and other metallic objects, but it was not very practical for taking pictures of someone's entire aura.
 
 And this is where we start bending this project's own notion of authenticity. Like many other works of art, it's all about context and constructed narratives. Like many other acts of charlatanism, it's all about context and constructed narratives.
 
@@ -15,8 +16,8 @@ What it is: a method for taking digital double-exposure photographs. A camera is
 
 For those who get a kick out of reading manuscripts, the mechanism looked something like this:
 
-![](/assets/projects/auras/bio_sch.jpg)
+![]({{ "assets/collaborations/auras/bio_sch.jpg" | relative_url }})
 
 And my aura looks something like this:
 
-![](/assets/projects/auras/8250930198_feba496c64_o.jpg)
+![]({{ "assets/collaborations/auras/8250930198_feba496c64_o.jpg" | relative_url }})
