--- a/_posts/collaborations/2015-06-28-b10s.md
+++ b/_posts/collaborations/2015-06-28-b10s.md
@@ -6,7 +6,7 @@ pics: https://www.flickr.com/photos/microhom/albums/72157655059885880
 www: http://interspecifics.cc/work/open-sensory-substitution-2015/
 collab: http://www.interspecifics.cc/
 ---
-![](/assets/projects/b10s/b10s06.jpg)
+{% include vimeo.html id="171043803" %}
 
 Project done with the [Interspecifics](http://www.interspecifics.cc/){:target="_blank"} collective.
 
@@ -16,16 +16,12 @@ For the second meeting of the project, we decided to explore sensory substitutio
 
 The term sensory substitution refers to a non-invasive technique introduced by the neuroscientist [Paul Bach-y-Rita](https://en.wikipedia.org/wiki/Paul_Bach-y-Rita){:target="_blank"} in the 60's to assist the restoration of damaged senses using hybrid brain-machine interfaces to redirect certain stimuli from one sensory modality to another and use the elasticity of the brain to replace certain perceptual capabilities. It suggests that while the brain and any one of its connections to the environment operate properly, peripheral sensory systems are secondary in the exercise of global cognition.
 
-![](/assets/projects/b10s/b10s01.jpg)
+![]({{ "assets/collaborations/b10s/b10s_00.webp" | relative_url }})
 
 What would this mean for a person without any visual impairment? Is it possible to create unexpected perceptual experiences or is there such thing as sensory oversaturation?
 
-![](/assets/projects/b10s/b10s00.jpg)
-
 The objective of this laboratory was to implement a prototype for sensorial substitution that allowed the brain to create a spatial map of the environment from sound and electro-tactile stimulation, and in this way study the possibility of expanding human abilities and challenge the Aristotelian concepti that postulates five senses with specific functions clearly separated from each other.
 
-![](/assets/projects/b10s/b10s09.jpg)
+{% include swipebox.html prefix="b10s_0" %}
 
 Each participant built their own prototype made up of a RaspberryPi, camera, headphones, small current amplifier circuit and tongue paddle, and programmed it using a combination of Python scripts and SuperCollider patches.
-
-{% include vimeo.html id="171043803" %}
