--- a/_posts/collaborations/2016-08-08-lgqd.md
+++ b/_posts/collaborations/2016-08-08-lgqd.md
@@ -5,10 +5,9 @@ github: https://github.com/thiagohersan/LabGraficoCidadeQueer
 www: http://www.lgdesviante.org/
 collab: http://www.cidadequeer.lanchonete.org/
 ---
-![](/assets/projects/lgqd/lgqd00.jpg)
+![]({{ "assets/collaborations/lgqd/lgqd00.jpg" | relative_url }})
 
 *Text from* [Cidade Queer, a Reader](http://www.edicoesaurora.com/cidade-queer-uma-leitora/){:target="_blank"} *by Júlia Ayerbe*.
-
 
 To all appearances, queer is a term that came to Brazil by plane, landing in the academic world, in symposia, anthropology, and the visual arts. But as a foreign word, what does it enunciate? It is worth recalling that, even before finding the meaning of words, Brazil traditionally and easily swallows them through their signifiers -- we are extremely "adjustable" to the sounds coming from the outside.
 
@@ -20,7 +19,7 @@ Within the universe of such questionings, and knowing that the [Cidade Queer](ht
 The Laboratory had four meetings, of nearly three hours each, to discuss and study problems around queer and denormatization in both visual and written language. The lab’s most important principle is not to establish new paradigms, i.e., not to think that a problem is solved with the creation
 of a new structure, for the latter will be as normative as the previous one.
 
-![](/assets/projects/lgqd/queer_intro.jpg)
+![]({{ "assets/collaborations/lgqd/queer_intro.jpg" | relative_url }})
 
 The first axis to be discussed was the translation possibilities concerning "queer". As from the definition of the Oxford dictionary, we went back to the history of Brazil, looking for neighboring words that could be analogous to the idea of queer. The goal was to create a lexical universe around the concept rather than actually translate it.
 
@@ -28,7 +27,7 @@ The first axis to be discussed was the translation possibilities concerning "que
 
 Assimilating that this lexicon, as well as its writing -- queer, cuir, kuir -- swiftly changes, we developed a [chrome extension](https://chrome.google.com/webstore/detail/laborat%C3%B3rio-gr%C3%A1fico-cidad/dfajjdldolemeglihppihihacdhhcmgj){:target="_blank"} that alters the word "queer" when it shows up online in a browser, showing its neighboring terms at each page refresh.
 
-![](/assets/projects/lgqd/queer_chrome.jpg)
+![]({{ "assets/collaborations/lgqd/queer_chrome.jpg" | relative_url }})
 
 The matter of gender markers in Portuguese -- and Latin languages as a whole -- also presented itself, whether in the predominance of the use of masculine terms for plural constructions or its presence permeating all things (names), at first as an insurmountable issue.
 
@@ -36,7 +35,7 @@ Experimenting with this problem, artist Fabio Morais rewrote the Portuguese tran
 
 The matter of boundaries between what is said and how it is said raised an important discussion: is it possible to make a feminist publication having a patriarchal language as its grounds? In Portuguese, when we say "we are all feminists", is this "all" masculine (todos) or feminine (todas)? Is the need for speech greater than the subversion of forms? What is the good measure between these two things?
 
-![](/assets/projects/lgqd/fabiomorais__ciborgue.jpg)
+![]({{ "assets/collaborations/lgqd/fabiomorais__ciborgue.jpg" | relative_url }})
 
 Still part of the same confrontation, we discussed the limits of using "x" and "@" as a solution to replace gender designations with an encompassing of all gender identities, also approaching how it would be possible, in the stiffness of our alphabet and lexicon, to subvert this issue.
 
@@ -44,7 +43,7 @@ This way, we began to question what a queer vowel would be like, coalescing "a",
 
 We questioned what a formal vocabulary regarding queer would be like, as well as which cases and colors were associated with it. Since the proposition did not involve the creation of a new normativity, we opted for subverting the most popular and massified fonts -- Times New Roman and Arial -- instead of developing a new typographic family.
 
-![](/assets/projects/lgqd/laura_fonte00.jpg)
+![]({{ "assets/collaborations/lgqd/laura_fonte00.jpg" | relative_url }})
 
 The queer vowel was created from experiments with parts of characters taken from stencils. Since this process is made by previously cutting the font’s glyphs, it resulted in fragments of letters that were then manipulated in order to compose different combinations.
 
@@ -56,7 +55,7 @@ In an essay from 1919, Freud writes about *Das Unheimliche* (the Uncanny). The t
 
 We then proposed an exercise of mixing Freud’s sentences, leaving a blank space where *Das Unheimliche* woud have appeared, with the lexicon of related words in the backdrop.
 
-![](/assets/projects/lgqd/freud.gif)
+![]({{ "assets/collaborations/lgqd/freud.gif" | relative_url }})
 
 Another exercise involved interfering in sentences written by artist Vito Acconci, in which he approaches the performativity of writing and the city, overlapping them with a sinuous grid taken from the city of São Paulo.
 
