re-orgs images for draft projects

--- a/_posts/drafts/2014-12-25-sdr.md
+++ b/_posts/drafts/2014-12-25-sdr.md
@@ -3,33 +3,30 @@ category: draft
 title: SDR
 github: https://github.com/thiagohersan/SDR
 collab: http://impakt.nl/
+cover: assets/drafts/sdr/sdr-radio_3775.webp
 ---
-![](/assets/projects/sdr/diagram00.png)
+![]({{ "assets/drafts/sdr/sdr-radio_3775.webp" | relative_url }})
 
 <div class="quote">
   The radio would be the finest possible communication apparatus in public life ... if it knew how to receive as well as to transmit, how to let the listeners speak as well as hear, how to bring them into relationships instead of isolating them.<br>
   <div class="quote-author">Bertolt Brecht, 1932</div>
 </div>
 
-![](/assets/projects/sdr/radio_3775.jpg)
-
 Generally speaking, this project is about the unresolved local/global, physical/virtual tensions of hybrid spaces.
 
 SDR is a temporary, portable, occupation of the electromagnetic spectrum. It transmits songs of protest by recontextualizing messages from social networking sites.
 
-![](/assets/projects/sdr/diagram01.jpg)
+{% include swipebox.html prefix="sdr-diagram_" %}
 
 The system consists of a database of song lyrics whose grammatical structure has been analyzed and annoted using part-of-speech and sentiment classifiers. At the same time, twitter and other social networking sites are scraped for messages and hashtags expressing discontent, and their text is also analyzed using the part-of-speech and sentiment classifiers.
 
 Finally, custom software combines the tagged data to create texts that have the structure of the songs, but words from the public messages. These new songs are then "sung" by a modified Text-to-Speech system and broadcast by a small FM trasmitter hidden inside a radio.
 
-![](/assets/projects/sdr/radio_3774.jpg)
-
 In the end, there are protests hidden inside songs, and a transmitter hidden inside a receiver.
 
 Inspired by, and acting as a kind of "monument" for the [June 2013 manifestations](https://en.wikipedia.org/wiki/2013_protests_in_Brazil){:target="_blank"} in Brazil, the system creates its songs using MPB songs along with tweets and blog posts written between June and July of 2013.
 
-{% include swipebox.html prefix="radio_37" %}
+{% include swipebox.html prefix="sdr-radio_37" %}
 
 {% include vimeo.html id="251810364" %}
 
@@ -39,6 +36,4 @@ Inspired by, and acting as a kind of "monument" for the [June 2013 manifestation
 {% include vimeo.html id="252647372" %}
 {% endcomment %}
 
-{% comment %}
-This project was realized during an [Impakt Works Residency](http://impakt.nl/headquarters/works/impakt-artist-in-residence-2015/resident-artist-thiago-hersan/){:target="_blank"} at Impakt Headquarters, in Utrecht, Netherlands.
-{% endcomment %}
+This project was developed during an [Impakt Works Residency](http://impakt.nl/headquarters/works/impakt-artist-in-residence-2015/resident-artist-thiago-hersan/){:target="_blank"} at Impakt Headquarters, in Utrecht, Netherlands.
