re-orgs images for workshop projects

--- a/_posts/workshops/2013-01-27-el-abismo.md
+++ b/_posts/workshops/2013-01-27-el-abismo.md
@@ -4,9 +4,9 @@ title: El Abismo
 github: https://github.com/astrovandalistas/AbismoTwitterOF
 pics: https://www.flickr.com/photos/microhom/sets/72157632606087124
 astros: http://astrovandalistas.cc/abismo/
-cover: /assets/projects/el-abismo/abismo10.jpg
+cover: assets/workshops/el-abismo/abismo10.jpg
 ---
-![](/assets/projects/el-abismo/logoHEADER1.jpg)
+![]({{ "assets/workshops/el-abismo/logoHEADER1.jpg" | relative_url }})
 
 *El Abismo* is part live performance, part construction of a collective memory of the events that took place during [The Mexican Spring of 2012](http://en.wikipedia.org/wiki/Yo_Soy_132){:target="_blank"}, built by those who participated in the manifestations.
 
@@ -14,15 +14,15 @@ cover: /assets/projects/el-abismo/abismo10.jpg
 
 People were invited to participate in the construction of this collective archive by submitting their images, videos, audio tracks and texts through an online platform, or, much like the original [*Yo Soy 132*](http://en.wikipedia.org/wiki/Yo_Soy_132){:target="_blank"} movement, by submitting texts via twitter using a specific hashtag.
 
-![](/assets/projects/el-abismo/abismo10.jpg)
+![]({{ "assets/workshops/el-abismo/abismo10.jpg" | relative_url }})
 
 The material was organized during a week-long workshop at the Live Performers Meeting 2013 - Mexico City, and the resulting archive was exhibited as a live performance during the same festival.
 
-![](/assets/projects/el-abismo/abismoLPM03.jpg)
+![]({{ "assets/workshops/el-abismo/abismoLPM03.jpg" | relative_url }})
 
 Besides helping organize the workshops, my other contribution to the project was a platform for live manipulation of a twitter stream.
 
-![](/assets/projects/el-abismo/abismoLPM05.jpg)
+![]({{ "assets/workshops/el-abismo/abismoLPM05.jpg" | relative_url }})
 
 I wrote software to build graphical compositions made up of words and phrases from tweets sent with a specific hashtag during the performance. Some of my favorites:
 
