removes site.baseurl in favor of using relative_url filter

--- a/_pages/404.md
+++ b/_pages/404.md
@@ -7,4 +7,4 @@ No Page Here.
 
 Sorry.
 
-<img src="{{ site.baseurl }}/assets/covers/gabriel.gif" alt="" />
+<img src="{{ 'assets/covers/gabriel.gif' | relative_url }}" alt="404 Angel" />
