--- a/_posts/works/2014-06-08-ctrl-z.md
+++ b/_posts/works/2014-06-08-ctrl-z.md
@@ -8,7 +8,7 @@ cover: /assets/projects/ctrl-z/ctrl-z_00.webp
 
 Part performance, part product, this is a kind of exercise in exploring the relationship between language and physical objects, secrets and sentiments.
 
-While [Angry Letters]({{ site.baseurl }}/angry-letters/) dealt with the materialization of anger, this is the materialization of something else. While in San Francisco, I recorded myself telling personal secrets, industrial secrets and reading my favorite parts from NDA documents of different tech companies based in the greater Silicon Valley region (specially the self-referential parts that specify rules regarding the document itself).
+While [Angry Letters]({{ "angry-letters/" | relative_url }}) dealt with the materialization of anger, this is the materialization of something else. While in San Francisco, I recorded myself telling personal secrets, industrial secrets and reading my favorite parts from NDA documents of different tech companies based in the greater Silicon Valley region (specially the self-referential parts that specify rules regarding the document itself).
 
 {% include vimeo.html id="128310917" %}
 
