adds exhibitions to projects

--- a/_posts/works/2014-11-10-0-25-fps.md
+++ b/_posts/works/2014-11-10-0-25-fps.md
@@ -25,3 +25,7 @@ As a public art intervention, this project is a kind of homage to other forms of
 0.25 FPS was commissioned for the 3rd [SP_Urban Festival](http://spurban.com.br/){:target="_blank"} in São Paulo, Brazil.
 
 {% include vimeo.html id="114106478" %}
+
+**Exhibitions:**  
+2016: UnFollow, FACT - Liverpool, UK.  
+2014: SP_Urban, FIESP - São Paulo, BR.
