--- a/_posts/works/2014-12-12-memememe.md
+++ b/_posts/works/2014-12-12-memememe.md
@@ -34,3 +34,12 @@ memememe2memememe is a sculpture that celebrates the ambiguities of human/object
 {% include swipebox.html prefix="meme2meme_" %}
 
 Residues of their [conversation](http://memememeselfie.tumblr.com/){:target="_blank"} can be seen on their tumblr [feeds](http://memememe2memememe.tumblr.com/){:target="_blank"}.
+
+**Exhibitions:**  
+2018: El Exploratorio: Zona I, MoLAA - Long Beach, US.  
+2017: Mirror Mirror, MUDAC - Lausanne, CH.  
+2017: Humans Need Not Apply, Science Gallery - Dublin, IE.  
+2016: Digital POP, ADAF 2016 - Athens, GR.  
+2016: Ob_ject & Ob_serve, A Small View - Liverpool, UK.  
+2015: Media Art Futures, Centro Parraga, - Murcia, ES.  
+2014: Unknown Territory, CRANE - Philadelphia, US.
