description of workshops: afeto, visualizing, sonora

--- a/_posts/workshops/2013-01-27-el-abismo.md
+++ b/_posts/workshops/2013-01-27-el-abismo.md
@@ -27,3 +27,6 @@ Besides helping organize the workshops, my other contribution to the project was
 I wrote software to build graphical compositions made up of words and phrases from tweets sent with a specific hashtag during the performance. Some of my favorites:
 
 {% include swipebox.html prefix="abismoTwitter" %}
+
+**Previous instances:**  
+2013: Live Performers Meeting, Centro Multimedia - México City, MX.
