adds exhibitions and details and references to header/front-matter

--- a/_posts/works/2013-01-27-el-abismo.md
+++ b/_posts/works/2013-01-27-el-abismo.md
@@ -5,6 +5,9 @@ github: https://github.com/astrovandalistas/AbismoTwitterOF
 pics: https://www.flickr.com/photos/microhom/sets/72157632606087124
 astros: http://astrovandalistas.cc/abismo/
 cover: assets/projects/el-abismo/abismoLogo00.webp
+details:
+  'Exhibitions':
+    - '2013: Live Performers Meeting, Centro Multimedia - México City, MX'
 ---
 {% include vimeo.html id="77638955" %}
 
@@ -22,5 +25,4 @@ For this performance, I created a platform for live manipulation of a twitter st
 
 {% include swipebox.html prefix="abismoTwitter" %}
 
-**Exhibitions:**  
-2013: Live Performers Meeting, Centro Multimedia - México City, MX.
+{% include details.html %}
