--- a/_posts/works/2014-11-10-0-25-fps.md
+++ b/_posts/works/2014-11-10-0-25-fps.md
@@ -4,9 +4,13 @@ title: 0.25 FPS
 github: https://github.com/thiagohersan/QuarterFramePerSecond
 pics: https://www.flickr.com/photos/tuukul/sets/72157648926261349
 collab: https://www.radames.in/
-cover: /assets/projects/0-25-fps/Color_img.webp
+cover: assets/projects/0-25-fps/Color_img.webp
+details:
+  'Exhibitions':
+    - '2016: UnFollow, FACT - Liverpool, UK'
+    - '2014: SP_Urban, FIESP - São Paulo, BR'
 ---
-![](/assets/projects/0-25-fps/Color_img.webp)
+![]({{ "assets/projects/0-25-fps/Color_img.webp" | relative_url }})
 
 As we keep racing to make our communication devices better, faster and smaller, how can we make sure our interactions still impart a sense of uniqueness and specialness for the people involved, and that our personalities don’t get optimized out of our own communication processes?
 
@@ -20,10 +24,8 @@ The installation consists of a camera and a mirror placed in front of a building
 
 As a public art intervention, this project is a kind of homage to other forms of technology-mediated communications, like architecture and photography. On the one hand, this project can be seen as a minimalist sculpture and site-specific installation made up of a camera, a mirror and a building, where the building’s narcissistic tendencies reflect our own desires for self-promotion and self-importance accelerated and propagated by technology. On the other hand, the work is an open platform that invites direct participation and creates an opportunity for playfulness, social interaction and collective communication through the use of a simple interface that nonetheless transforms and reinterprets the urban landscape. It is an experience, without being a spectacle.
 
-![](/assets/projects/0-25-fps/FIESP00_tgh_12.webp)
+{% include details.html %}
+
+![]({{ "assets/projects/0-25-fps/FIESP00_tgh_12.webp" | relative_url }})
 
 {% include vimeo.html id="114106478" %}
-
-**Exhibitions:**  
-2016: UnFollow, FACT - Liverpool, UK.  
-2014: SP_Urban, FIESP - São Paulo, BR.
