--- a/_posts/works/2014-12-12-memememe.md
+++ b/_posts/works/2014-12-12-memememe.md
@@ -5,7 +5,16 @@ github: https://github.com/thiagohersan/memememe
 pics: https://www.flickr.com/photos/tuukul/sets/72157646159118191
 www: http://www.memememememememe.me/
 collab: https://www.radames.in/
-cover: /assets/projects/memememe/meme2meme_00.jpg
+cover: assets/projects/memememe/meme2meme_00.jpg
+details:
+  'Exhibitions':
+    - '2018: El Exploratorio: Zona I, MoLAA - Long Beach, US'
+    - '2017: Mirror Mirror, MUDAC - Lausanne, CH'
+    - '2017: Humans Need Not Apply, Science Gallery - Dublin, IE'
+    - '2016: Digital POP, ADAF 2016 - Athens, GR'
+    - '2016: Ob_ject & Ob_serve, A Small View - Liverpool, UK'
+    - '2015: Media Art Futures, Centro Parraga, - Murcia, ES'
+    - '2014: Unknown Territory, CRANE - Philadelphia, US'
 ---
 {% include vimeo.html id="165396798" %}
 
@@ -31,15 +40,8 @@ What are the consequences (or limitations) of communicating without an other? Ca
 
 memememe2memememe is a sculpture that celebrates the ambiguities of human/object, user/interface and actor/network relationships. It is an app that removes phones from their anthropocentric usefulness, and gives them the beginnings of a language.
 
-{% include swipebox.html prefix="meme2meme_" %}
-
 Residues of their [conversation](http://memememeselfie.tumblr.com/){:target="_blank"} can be seen on their tumblr [feeds](http://memememe2memememe.tumblr.com/){:target="_blank"}.
 
-**Exhibitions:**  
-2018: El Exploratorio: Zona I, MoLAA - Long Beach, US.  
-2017: Mirror Mirror, MUDAC - Lausanne, CH.  
-2017: Humans Need Not Apply, Science Gallery - Dublin, IE.  
-2016: Digital POP, ADAF 2016 - Athens, GR.  
-2016: Ob_ject & Ob_serve, A Small View - Liverpool, UK.  
-2015: Media Art Futures, Centro Parraga, - Murcia, ES.  
-2014: Unknown Territory, CRANE - Philadelphia, US.
+{% include swipebox.html prefix="meme2meme_" %}
+
+{% include details.html %}
